--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -11,7 +11,7 @@
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
         <!-- Background stylesheet -->
-        <link href="css/BackgroundImage.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/BackgroundImage.css" rel="stylesheet" type="text/css"/>
 
         <!-- Map JS -->
         <script type="text/javascript" src="mapdata.js"></script>		
