--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -131,5 +131,7 @@
         <script src="https://code.jquery.com/jquery-3.4.0.min.js" crossorigin="anonymous"></script>
         <!-- BOOTSTRAP JS -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <!-- Custom JS -->
+        <script src="map.js"></script>
     </body>
 </html>
