--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="card border-0 shadow my-5">
                 <div class="card-body p-5">
-                    <h1 class="font-weight-light">Satellite Energy Solution</h1>
+                    <h1 class="font-weight-light">Satellite Energy Solutions</h1>
                     
                     <div id="map">
                         <svg id="svgMap" name="testName" baseprofile="tiny" fill="#ececec" height="684" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".1" version="1.2" viewbox="0 0 1000 684" width="1000" xmlns="http://www.w3.org/2000/svg">
