--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -26,12 +26,12 @@
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
 
                 <div id="map">
-                    <svg id="svgMap" name="testName" baseprofile="tiny" fill="#ececec" height="684" stroke="black"
+                    <svg id="svgMap" baseprofile="tiny" fill="#ececec" height="684" stroke="black"
                         stroke-linecap="round" stroke-linejoin="round" stroke-width=".1" version="1.2"
                         viewbox="0 0 1000 684" width="1000" xmlns="http://www.w3.org/2000/svg">
 
                         <!-- Wind turbine -->
-                        <svg id="windTurbineWrapper" x="450" y="270" width="100" height="100"
+                        <svg id="windTurbineWrapper" x="460" y="270" width="100" height="100"
                             style="overflow: visible;">
                             <!-- helper rect to visualize the bounding box -->
                             <rect x="0" y="0" width="100%" height="100%" fill="none" stroke="#f00" stroke-width="10">
