--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -34,7 +34,7 @@
                         <svg id="windTurbineWrapper" x="460" y="270" width="100" height="100"
                             style="overflow: visible;">
                             <!-- helper rect -->
-                            <rect x="0" y="0" width="100%" height="100%" fill="none" stroke-width="1000" id="windTurbine">
+                            <rect x="0" y="0" width="100%" height="100%" fill="none" stroke-width="100" style="fill:aliceblue" id="windTurbine">
                             </rect>
 
                             <path
