--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -23,8 +23,10 @@
     <div class="container">
         <div class="card border-0 shadow my-5">
             <div class="card-body p-5">
+                <!--Headline-->
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
 
+                <!--The Map-->
                 <div id="map">
                     <svg id="svgMap" baseprofile="tiny" fill="#ececec" height="684" stroke="black"
                         stroke-linecap="round" stroke-linejoin="round" stroke-width=".1" version="1.2"
@@ -225,9 +227,11 @@
                     <div id="mapOutput"></div>
                 </div>
 
+                <!--Dynamically loaded content-->
+                <div id="content"></div>
 
-
-                <div style="height: 700px"></div>
+                <!--Space at the bottom-->
+                <div style="height: 100px"></div>
             </div>
         </div>
     </div>
