--- a/src/main/webapp/copernicus/DK.html
+++ b/src/main/webapp/copernicus/DK.html
@@ -1,5 +1,5 @@
 <!-- Button trigger modal -->
-<button type="button" id="DKButton" class="btn btn-primary" data-toggle="modal" data-target="#DKModal" hidden>
+<button type="button" id="modalButton" class="btn btn-primary" data-toggle="modal" data-target="#DKModal" hidden>
     Launches Modal
 </button>
 
