--- a/src/main/webapp/copernicus/DK.html
+++ b/src/main/webapp/copernicus/DK.html
@@ -16,7 +16,54 @@
             </div>
             <div class="modal-body">
                 <!--INSERT DATA HERE-->
-                TEST 
+                TEST
+
+                <!--Data table:-->
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Year</th>
+                            <th scope="col">Average Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>2019</td>
+                            <td>267.8044</td>
+                        </tr>
+                        <tr>
+                            <td>2020</td>
+                            <td>285.7034</td>
+                        </tr>
+                        <tr>
+                            <td>2021</td>
+                            <td>325.9303</td>
+                        </tr>
+                        <tr>
+                            <td>2023</td>
+                            <td>436.6221</td>
+                        </tr>
+                        <tr>
+                            <td>2025</td>
+                            <td>441.4724</td>
+                        </tr>
+                        <tr>
+                            <td>2030</td>
+                            <td>362.5888</td>
+                        </tr>
+                        <tr>
+                            <td>2035</td>
+                            <td>381.9629</td>
+                        </tr>
+                        <tr>
+                            <td>2040</td>
+                            <td>397.7376</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
