Removed "Test" and prepared a tag for excel download

--- a/src/main/webapp/copernicus/DK.html
+++ b/src/main/webapp/copernicus/DK.html
@@ -16,8 +16,6 @@
             </div>
             <div class="modal-body">
                 <!--INSERT DATA HERE-->
-                TEST
-
                 <!--Data table:-->
                 <table class="table table-hover">
                     <thead>
@@ -67,7 +65,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save Data</button>
+                <a class="btn btn-primary" href="#" role="button" download>Save Data</a>
             </div>
         </div>
     </div>
