Preparation for new countries with data

--- a/src/main/webapp/copernicus/DK.html
+++ b/src/main/webapp/copernicus/DK.html
@@ -21,7 +21,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Year</th>
-                            <th scope="col">Average Price</th>
+                            <th scope="col">Average Price (DKK/MWh)</th>
                         </tr>
                     </thead>
                     <tbody>
