--- a/src/main/webapp/copernicus/DK.html
+++ b/src/main/webapp/copernicus/DK.html
@@ -1,10 +1,10 @@
 <!-- Button trigger modal -->
-<button type="button" id="modalButton" class="btn btn-primary" data-toggle="modal" data-target="#DKModal" hidden>
+<button type="button" id="modalButton" class="btn btn-primary" data-toggle="modal" data-target="#Modal" hidden>
     Launches Modal
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="DKModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+<div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
