All prices updated

--- a/src/main/webapp/copernicus/FR.html
+++ b/src/main/webapp/copernicus/FR.html
@@ -24,7 +24,7 @@
                                 <th scope="col">Average Price (DKK/MWh)</th>
                             </tr>
                         </thead>
-                        <tbody> <!-- TODO UPDATE -->
+                        <tbody> 
                             <tr>
                                 <td>2019</td>
                                 <td>409.3303</td>
