--- a/src/main/webapp/copernicus/SE.html
+++ b/src/main/webapp/copernicus/SE.html
@@ -24,38 +24,38 @@
                                 <th scope="col">Average Price (DKK/MWh)</th>
                             </tr>
                         </thead>
-                        <tbody> <!-- TODO UPDATE -->
+                        <tbody> 
                             <tr>
                                 <td>2019</td>
-                                <td>267.8044</td>
+                                <td>267.296</td>
                             </tr>
                             <tr>
                                 <td>2020</td>
-                                <td>285.7034</td>
+                                <td>288.7675</td>
                             </tr>
                             <tr>
                                 <td>2021</td>
-                                <td>325.9303</td>
+                                <td>337.0116</td>
                             </tr>
                             <tr>
                                 <td>2023</td>
-                                <td>436.6221</td>
+                                <td>418.7345</td>
                             </tr>
                             <tr>
                                 <td>2025</td>
-                                <td>441.4724</td>
+                                <td>425.9857</td>
                             </tr>
                             <tr>
                                 <td>2030</td>
-                                <td>362.5888</td>
+                                <td>338.8015</td>
                             </tr>
                             <tr>
                                 <td>2035</td>
-                                <td>381.9629</td>
+                                <td>353.184</td>
                             </tr>
                             <tr>
                                 <td>2040</td>
-                                <td>397.7376</td>
+                                <td>340.9389</td>
                             </tr>
     
                         </tbody>
