--- a/src/main/webapp/copernicus/DE.html
+++ b/src/main/webapp/copernicus/DE.html
@@ -24,38 +24,38 @@
                                 <th scope="col">Average Price (DKK/MWh)</th>
                             </tr>
                         </thead>
-                        <tbody> <!-- TODO UPDATE -->
+                        <tbody> 
                             <tr>
                                 <td>2019</td>
-                                <td>267.8044</td>
+                                <td>266.2132</td>
                             </tr>
                             <tr>
                                 <td>2020</td>
-                                <td>285.7034</td>
+                                <td>269.8142</td>
                             </tr>
                             <tr>
                                 <td>2021</td>
-                                <td>325.9303</td>
+                                <td>315.4136</td>
                             </tr>
                             <tr>
                                 <td>2023</td>
-                                <td>436.6221</td>
+                                <td>452.3133</td>
                             </tr>
                             <tr>
                                 <td>2025</td>
-                                <td>441.4724</td>
+                                <td>454.9336</td>
                             </tr>
                             <tr>
                                 <td>2030</td>
-                                <td>362.5888</td>
+                                <td>364.9614</td>
                             </tr>
                             <tr>
                                 <td>2035</td>
-                                <td>381.9629</td>
+                                <td>399.6039</td>
                             </tr>
                             <tr>
                                 <td>2040</td>
-                                <td>397.7376</td>
+                                <td>384.1487</td>
                             </tr>
     
                         </tbody>
