--- a/src/main/webapp/copernicus/GB.html
+++ b/src/main/webapp/copernicus/GB.html
@@ -24,38 +24,38 @@
                                 <th scope="col">Average Price (DKK/MWh)</th>
                             </tr>
                         </thead>
-                        <tbody> <!-- TODO UPDATE -->
+                        <tbody> 
                             <tr>
                                 <td>2019</td>
-                                <td>267.8044</td>
+                                <td>458.526</td>
                             </tr>
                             <tr>
                                 <td>2020</td>
-                                <td>285.7034</td>
+                                <td>406.4064</td>
                             </tr>
                             <tr>
                                 <td>2021</td>
-                                <td>325.9303</td>
+                                <td>408.6584</td>
                             </tr>
                             <tr>
                                 <td>2023</td>
-                                <td>436.6221</td>
+                                <td>421.2139</td>
                             </tr>
                             <tr>
                                 <td>2025</td>
-                                <td>441.4724</td>
+                                <td>428.6174</td>
                             </tr>
                             <tr>
                                 <td>2030</td>
-                                <td>362.5888</td>
+                                <td>378.7033</td>
                             </tr>
                             <tr>
                                 <td>2035</td>
-                                <td>381.9629</td>
+                                <td>400.023</td>
                             </tr>
                             <tr>
                                 <td>2040</td>
-                                <td>397.7376</td>
+                                <td>381.8417</td>
                             </tr>
     
                         </tbody>
