New folder structure

--- a/src/main/webapp/copernicus/countries/FR.html
+++ b/src/main/webapp/copernicus/countries/FR.html
@@ -9,7 +9,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Netherlands Data</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">France Data</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -27,35 +27,35 @@
                         <tbody> 
                             <tr>
                                 <td>2019</td>
-                                <td>458.526</td>
+                                <td>409.3303</td>
                             </tr>
                             <tr>
                                 <td>2020</td>
-                                <td>406.4064</td>
+                                <td>361.5845</td>
                             </tr>
                             <tr>
                                 <td>2021</td>
-                                <td>408.6584</td>
+                                <td>386.3406</td>
                             </tr>
                             <tr>
                                 <td>2023</td>
-                                <td>421.2139</td>
+                                <td>462.2933</td>
                             </tr>
                             <tr>
                                 <td>2025</td>
-                                <td>428.6174</td>
+                                <td>489.4538</td>
                             </tr>
                             <tr>
                                 <td>2030</td>
-                                <td>378.7033</td>
+                                <td>383.6784</td>
                             </tr>
                             <tr>
                                 <td>2035</td>
-                                <td>400.0233</td>
+                                <td>416.2529</td>
                             </tr>
                             <tr>
                                 <td>2040</td>
-                                <td>381.8417</td>
+                                <td>404.866</td>
                             </tr>
     
                         </tbody>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a class="btn btn-primary" href="NL_Electricity_Price_forecast.xlsx" role="button" download>Save Data</a>
+                    <a class="btn btn-primary" href="download/FR_Electricity_price_forecast.xlsx" role="button" download>Save Data</a>
                 </div>
             </div>
         </div>
