--- a/src/main/webapp/copernicus/countries/DE.html
+++ b/src/main/webapp/copernicus/countries/DE.html
@@ -9,7 +9,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Great Britain Data</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Germany Data</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -27,35 +27,35 @@
                         <tbody> 
                             <tr>
                                 <td>2019</td>
-                                <td>458.526</td>
+                                <td>266.2132</td>
                             </tr>
                             <tr>
                                 <td>2020</td>
-                                <td>406.4064</td>
+                                <td>269.8142</td>
                             </tr>
                             <tr>
                                 <td>2021</td>
-                                <td>408.6584</td>
+                                <td>315.4136</td>
                             </tr>
                             <tr>
                                 <td>2023</td>
-                                <td>421.2139</td>
+                                <td>452.3133</td>
                             </tr>
                             <tr>
                                 <td>2025</td>
-                                <td>428.6174</td>
+                                <td>454.9336</td>
                             </tr>
                             <tr>
                                 <td>2030</td>
-                                <td>378.7033</td>
+                                <td>364.9614</td>
                             </tr>
                             <tr>
                                 <td>2035</td>
-                                <td>400.023</td>
+                                <td>399.6039</td>
                             </tr>
                             <tr>
                                 <td>2040</td>
-                                <td>381.8417</td>
+                                <td>384.1487</td>
                             </tr>
     
                         </tbody>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a class="btn btn-primary" href="GB_Electricity_Price_forecast.xlsx" role="button" download>Save Data</a>
+                    <a class="btn btn-primary" href="download/DE_Electricity_Price_forecast.xlsx" role="button" download>Save Data</a>
                 </div>
             </div>
         </div>
