Maybe a path fix

--- a/src/main/webapp/copernicus/windspeeds.html
+++ b/src/main/webapp/copernicus/windspeeds.html
@@ -29,9 +29,11 @@
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
                 <h2 class="font-weight-light">Average Windspeeds in Europe</h2>
                 
+
                 <!--Dynamically loaded content-->
                 <div id="content"></div>
 
+                <!-- Back Button -->
                 <a href="map.html" role="button" class="btn btn-primary">Back</a>
 
                 <!--Space at the bottom-->
@@ -45,7 +47,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <!-- Custom JS -->
-    <script src="map.js"></script>
+    <script src="windspeeds.js"></script>
 </body>
 
 </html>
