--- a/src/main/webapp/copernicus/countries/DK.html
+++ b/src/main/webapp/copernicus/countries/DK.html
@@ -65,7 +65,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <a class="btn btn-primary" href="download/DK_Electricity_Price_forecast.xlsx" role="button" download>Save Data</a>
+                <a class="btn btn-primary" href="https://maltemagnussen.com/copernicus/countries/download/DK_Electricity_Price_forecast.xslx" role="button" download>Save Data</a>
             </div>
         </div>
     </div>
