Download fix attempt

--- a/src/main/webapp/copernicus/countries/SE.html
+++ b/src/main/webapp/copernicus/countries/SE.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a class="btn btn-primary" href="https://maltemagnussen.com/copernicus/countries/download/SE_Electricity_Price_forecast.xslx" role="button" download>Save Data</a>
+                    <a class="btn btn-primary" href="SE_Electricity_Price_forecast.xlsx" role="button" download>Save Data</a>
                 </div>
             </div>
         </div>
