--- a/src/main/webapp/copernicus/windspeeds.html
+++ b/src/main/webapp/copernicus/windspeeds.html
@@ -28,7 +28,11 @@
                 <!--Headline-->
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
                 <h2 class="font-weight-light">Average Windspeeds in Europe</h2>
-                
+
+                <div class="btn-group" role="group" aria-label="Average Windspeeds">
+                    <button type="button" class="btn btn-secondary" id="2018100m">2018, 100m</button>
+                    <button type="button" class="btn btn-secondary" id="2018150m">2018, 150m</button>
+                </div>
 
                 <!--Dynamically loaded content-->
                 <div id="content"></div>
