--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -12,6 +12,9 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
 
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Background stylesheet -->
     <link href="../css/BackgroundImage.css" rel="stylesheet" type="text/css" />
 
@@ -229,7 +232,16 @@
                 <!--Dynamically loaded content-->
                 <div id="content"></div>
 
+                <!-- Link to the windspeeds page -->
                 <a href="windspeeds.html" role="button" class="btn btn-primary">Average European Windspeeds</a>
+
+                <br>
+
+                <!-- Download link for Documentation for Copernicus Hackathon Mockup -->
+                <a href="../resources/Dokumentation-for-Copernicus-hackathon-mockup.docx" role="button"
+                    class="btn btn-primary"><i class="fa fa-download"></i>
+                    Download our Documentation for Copernicus Hackathon Mockup
+                </a>
 
                 <!--Space at the bottom-->
                 <div style="height: 100px"></div>
