--- a/src/main/webapp/copernicus/windspeeds.html
+++ b/src/main/webapp/copernicus/windspeeds.html
@@ -28,6 +28,7 @@
                 <!--Headline-->
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
 
+                <!--Average Windspeed in Europe-->
                 <div class="card shadow p-3 mb-5 bg-white rounded">
                     <div class="card-body">
                         <h2 class="font-weight-light">Average Windspeeds in Europe</h2>
@@ -42,7 +43,21 @@
                     </div>
                 </div>
 
+                <br>
 
+                <!--Average wind production Card-->
+                <div class="card shadow p-3 mb-5 bg-white rounded">
+                        <div class="card-body">
+                            <h2 class="font-weight-light">Average Wind Production for Vestas model 164 wind turbine in Europe</h2>
+    
+                            <div class="btn-group" role="group" aria-label="Average Production">
+                                <button type="button" class="btn btn-secondary" id="V164100m">Vestas 164, 100m</button>
+                            </div>
+    
+                            <!--Dynamically loaded content-->
+                            <div id="contentAvgProduction"></div>
+                        </div>
+                    </div>
 
                 <br>
                 <!-- Back Button -->
