--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -233,7 +233,7 @@
                 <div id="content"></div>
 
                 <!-- Link to the windspeeds page -->
-                <a href="windspeeds.html" role="button" class="btn btn-primary">Average European Windspeeds</a>
+                <a href="windspeeds.html" role="button" class="btn btn-primary">Windspeeds and Electricity Productions</a>
 
                 <br><br>
 
