Made By section

--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -233,7 +233,8 @@
                 <div id="content"></div>
 
                 <!-- Link to the windspeeds page -->
-                <a href="windspeeds.html" role="button" class="btn btn-primary">Windspeeds and Electricity Productions</a>
+                <a href="windspeeds.html" role="button" class="btn btn-primary">Windspeeds and Electricity
+                    Productions</a>
 
                 <br><br>
 
@@ -245,6 +246,11 @@
 
                 <!--Space at the bottom-->
                 <div style="height: 100px"></div>
+
+                <!--Done By-->
+                <div id="doneBy">Project made by August Zachariae, Andreas Stokholm, Malte Hviid-Magnussen 
+                    <br> Made for Oi-X weekend 25-27 October 2019 </div>
+
             </div>
         </div>
     </div>
