--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -249,7 +249,7 @@
 
                 <!--Done By-->
                 <div id="doneBy">Project made by August Zachariae, Andreas Stokholm, Malte Hviid-Magnussen 
-                    <br> Made for Oi-X weekend 25-27 October 2019 </div>
+                    <br> Made at Oi-X weekend 25-27 October 2019 </div>
 
             </div>
         </div>
