Windmill Placement Evalution

--- a/src/main/webapp/copernicus/windspeeds.html
+++ b/src/main/webapp/copernicus/windspeeds.html
@@ -59,6 +59,18 @@
                 </div>
 
                 <!--Case Example of Windmill placement evalution-->
+                <div class="card shadow p-3 mb-5 bg-white rounded">
+                    <div class="card-body">
+                        <h2 class="font-weight-light">Case Example of Windmill placement evalution</h2>
+
+                        <div class="btn-group" role="group" aria-label="Case Example">
+                            <button type="button" class="btn btn-secondary" id="caseExample">View Example 1</button>
+                        </div>
+
+                        <!--Dynamically loaded content-->
+                        <div id="contentCaseExample"></div>
+                    </div>
+                </div>
 
                 <br>
                 <!-- Back Button -->
