--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -28,6 +28,8 @@
             <div class="card-body p-5">
                 <!--Headline-->
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
+                <!-- Explanatory Text for Non-Engineers -->
+                <p class="font-weight-light">TEXT GOES HERE</p>
 
                 <!--The Map-->
                 <div id="map">
