--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -29,7 +29,10 @@
                 <!--Headline-->
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
                 <!-- Explanatory Text for Non-Engineers -->
-                <p class="font-weight-light">TEXT GOES HERE</p>
+                <p class="font-weight-light">This map contains an interactive interface for the user to get information
+                    for electricity price forecasts. The forecast are were performed during the hackathon using UERRA
+                    data, combined with the energy system model BALMOREL. Other visualised result examples are available
+                    at the bottom of the page.</p>
 
                 <!--The Map-->
                 <div id="map">
@@ -250,7 +253,7 @@
                 <div style="height: 100px"></div>
 
                 <!--Done By-->
-                <div id="doneBy">Project made by August Zachariae, Andreas Stokholm, Malte Hviid-Magnussen 
+                <div id="doneBy">Project made by August Zachariae, Andreas Stokholm, Malte Hviid-Magnussen
                     <br> Made at Oi-X weekend 25-27 October 2019 - Copernicus Track</div>
 
             </div>
