--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -29,10 +29,11 @@
                 <!--Headline-->
                 <h1 class="font-weight-light">Satellite Energy Solutions</h1>
                 <!-- Explanatory Text for Non-Engineers -->
-                <p class="font-weight-light" style="text-align: justify;">This map contains an interactive interface for the user to get information
-                    for electricity price forecasts. The forecast are were performed during the hackathon using UERRA
+                <p class="font-weight-light" style="text-align: justify;">
+                    This map contains an interactive interface for the user to get information
+                    for electricity price forecasts. The forecasts were performed during the hackathon using UERRA
                     data, combined with the energy system model BALMOREL. Other visualised result examples are available
-                    at the bottom of the page.</p>
+                    via the link at the bottom of the page.</p>
 
                 <!--The Map-->
                 <div id="map">
