--- a/src/main/webapp/copernicus/map.html
+++ b/src/main/webapp/copernicus/map.html
@@ -31,9 +31,14 @@
                 <!-- Explanatory Text for Non-Engineers -->
                 <p class="font-weight-light" style="text-align: justify;">
                     This map contains an interactive interface for the user to get information
-                    for electricity price forecasts. The forecasts were performed during the hackathon using UERRA
+                    for electricity price forecasts. The forecasts were created during the hackathon using UERRA
                     data, combined with the energy system model BALMOREL. Other visualised result examples are available
-                    via the link at the bottom of the page.</p>
+                    via the link at the bottom of the page.
+                    <br>
+                    Click a country to view electricity price forecasts. 
+                    <br>
+                    Currently implemented: France, Great Britain, Denmark, Sweden, Netherlands, Germany. 
+                </p>
 
                 <!--The Map-->
                 <div id="map">
